...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	 xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/app_background">

    <TextView android:id="@+id/fragment_edit_factors_title_text"
              style="@style/ScreenTitle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Your Factors"/>

    <TextView android:id="@+id/fragment_edit_factors_subtitle_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@id/fragment_edit_factors_title_text"
              android:text="Remember, always consult with a physician regarding any possible causes of your headaches."
              />

    <Button android:id="@+id/fragment_edit_factors_add_new_button"
            style="@style/DoneButton"
            android:layout_below="@id/fragment_edit_factors_subtitle_text"
            android:text="Add New Factor"/>

    <ListView android:id="@id/android:list"
              android:tag="fragment_edit_factors_factor_list"
...
