<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/icon_calendar"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/icon_calendar"
        android:title="@string/icon_calendar"/>
    
    <item
        android:id="@+id/icon_edit_today"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:icon="@drawable/icon_edit_today"
        android:title="@string/icon_edit_today"/>
    
  	<item
        android:id="@+id/icon_edit_factors"
        android:orderInCategory="400"
        android:showAsAction="always"
        android:icon="@drawable/icon_edit_factors"
        android:title="@string/icon_edit_factors"/>   
        
</menu>